--- a/package.json
+++ b/package.json
@@ -12,5 +12,11 @@
   "license": "ISC",
   "devDependencies": {
     "lite-server": "^2.3.0"
+  },
+  "dependencies": {
+    "bootstrap": "^4.4.1",
+    "bootstrap4": "0.0.1-security",
+    "jquery": "^3.5.0",
+    "popper.js": "^1.16.0"
   }
 }
